Add comprehensive Point of Sale system with backend and frontend features
Implement a full-stack Point of Sale system including customer management, order processing, inventory tracking, reporting, and user authentication.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 84116d88-4d59-484f-a43e-65d3867e12b2
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: f1763947-64bd-42e6-94f4-98930c690d64
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/5ba5ed0b-2102-44bd-b26a-5aa28c4371f5/84116d88-4d59-484f-a43e-65d3867e12b2/Qub46XP
Replit-Helium-Checkpoint-Created: true